tests/data/errors/end_on_error/output.py

x = 2

y =
# error:   File "<string>", line 4
# error:     y =
# error:        ^
# error: SyntaxError: invalid syntax
